syntax = "proto3";
package brilltech.maaser.entities;

option java_package = "com.brilltech.maaser.entities";
option java_outer_classname = "ContactProto";
option java_generate_equals_and_hash = true;

import "maaser.proto";

message Contact {
  string contactId = 1;
  string refId = 2;
  string email = 3;
  string name = 4;
  ContactType contactType = 5;
  bool isDeleted = 6;
  string phone = 7;
  string address = 8;
  int64 dob = 9;
  int64 createdAt = 10;
  int64 updatedAt = 11;
  string accountId = 12;
}


